# st0x.liquidity

./: .coderabbit.yaml  .env.alpaca.template  .env.example  .env.schwab.template  .envrc  .gitignore  .gitmodules  .taplo.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  FIXME.md  PLAN.md  README.md  ROADMAP.md  SPEC.md  TRUTH.md  and  bacon.toml  bootstrap.nix  clippy.toml  deploy.nix  docker-compose.template.yaml  example.config.toml  example.secrets.toml  example.toml  flake.nix  foundry.toml  grafana-datasource.yaml  justfile  keys.nix  lib  nixos.nix  os.nix  package-lock.json  prep-docker-compose.sh  remappings.txt  rust.nix  rustfmt.toml  (+3 more)
crates/bridge/: AGENTS.md  Cargo.toml
crates/bridge/cctp-abis/: MockMintBurnToken.json
crates/bridge/src/: cctp.rs  error_decoding.rs  lib.rs
crates/bridge/src/cctp/: evm.rs  mock_attestation.rs  mod.rs  test_contracts.rs
crates/broker/: Cargo.toml
crates/broker/src/: error.rs  lib.rs  mock.rs
crates/broker/src/alpaca/: auth.rs  broker.rs  market_hours.rs  mod.rs  order.rs
crates/broker/src/order/: state.rs  status.rs
crates/broker/src/schwab/: auth.rs  broker.rs  encryption.rs  market_hours.rs  mod.rs  order.rs  order_status.rs  tokens.rs
crates/config/: Cargo.toml
crates/config/src/: alerts.rs  evm.rs  failure_injector.rs  imbalance_threshold.rs  lib.rs  loader.rs  order_poller.rs  rebalancing.rs  telemetry.rs  threshold.rs  wallet.rs
crates/contract-caller/: Cargo.toml
crates/contract-caller/src/: fireblocks.rs  lib.rs  local.rs
crates/dto/: Cargo.toml  default.nix
crates/dto/src/: inventory.rs  lib.rs  main.rs  performance.rs  position.rs  settings.rs  statement.rs  trade.rs  transfer.rs
crates/e2e-tests/: Cargo.toml  README.md
crates/e2e-tests/src/: common.rs  lib.rs
crates/e2e-tests/src/services/: TestVault.json  alpaca_broker.rs  alpaca_tokenization.rs  base_chain.rs  cctp_attestation.rs  cctp_contracts.rs  mod.rs
crates/e2e-tests/tests/: hedging.rs  main.rs  rebalancing.rs
crates/e2e-tests/tests/hedging/: mod.rs  utils.rs
crates/e2e-tests/tests/rebalancing/: mod.rs  utils.rs
crates/event-sorcery/: Cargo.toml
crates/event-sorcery/src/: dependency.rs  lib.rs  lifecycle.rs  projection.rs  reactor.rs  schema_registry.rs  sqlite_event_repository.rs  testing.rs  wire.rs
crates/evm/: Cargo.toml  README.md
crates/evm/src/: bindings.rs  error_decoding.rs  fireblocks.rs  inflight_nonces.rs  lib.rs  local.rs  nonce.rs  stub.rs  submit.rs  test_chain.rs  tokens.rs  turnkey.rs
crates/exact-decimal/: Cargo.toml
crates/exact-decimal/src/: lib.rs
crates/execution/: AGENTS.md  Cargo.toml  README.md
crates/execution/proptest-regressions/: lib.txt
crates/execution/proptest-regressions/alpaca_broker_api/: order.txt
crates/execution/src/: alpaca_market_data.rs  alpaca_trading_api.rs  error.rs  lib.rs  mock.rs  order.rs  test_utils.rs
crates/execution/src/alpaca_broker_api/: activity.rs  auth.rs  client.rs  executor.rs  journal.rs  market_hours.rs  mock_api.rs  mod.rs  order.rs  positions.rs
crates/execution/src/alpaca_market_data/: client.rs  mock.rs  mod.rs
crates/execution/src/alpaca_trading_api/: auth.rs  executor.rs  inventory.rs  market_hours.rs  mod.rs  order.rs
crates/execution/src/alpaca_wallet/: asset.rs  client.rs  mod.rs  serde.rs  status.rs  transfer.rs  whitelist.rs
crates/execution/src/order/: mod.rs  state.rs  status.rs
crates/execution/src/schwab/: encryption.rs  executor.rs  market_hours.rs  mod.rs  order.rs  order_status.rs  persistence.rs  tokens.rs
crates/finance/: Cargo.toml
crates/finance/src/: id.rs  lib.rs  proptest.rs  shares.rs  symbol.rs  usd.rs  usdc.rs
crates/float-macro/: Cargo.toml
crates/float-macro/src/: lib.rs
crates/float-macro/tests/: float_macro.rs
crates/float-macro/tests/compile_fail/: dot_only.rs  dot_only.stderr  float_result_overflow.rs  float_result_overflow.stderr  negative_overflow.rs  negative_overflow.stderr  overflow.rs  overflow.stderr  trailing_dot.rs  trailing_dot.stderr
crates/float-serde/: Cargo.toml
crates/float-serde/src/: lib.rs
crates/raindex/: Cargo.toml
crates/raindex/src/: lib.rs  service.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/registry/src/symbol/: cache.rs  lock.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: bindings.rs  equity_token.rs  lib.rs  test_support.rs  tokenized_symbol.rs  wrapper.rs
crates/shared/src/wrapper/: ratio.rs  share.rs
crates/tokenization/: Cargo.toml
crates/tokenization/src/: alpaca.rs  bindings.rs  lib.rs  mock.rs
crates/vault/: Cargo.toml
crates/vault/src/: lib.rs  rain.rs
crates/wrapper/: Cargo.toml
crates/wrapper/src/: lib.rs  mock.rs  ratio.rs  service.rs
services/hedge/: Cargo.toml
services/hedge/migrations/: 20250703115746_trades.sql  20250924015332_add_block_timestamp_to_onchain_trades.sql  20251002213510_add_pyth_prices_from_traces.sql  20260113180043_drop_stale_net_position_column.sql  20260203141832_equity_redemption_view.sql  20260212115156_fix_position_view_json_paths.sql  20260212115445_fix_onchain_trade_view_json_paths.sql  20260212115929_fix_usdc_rebalance_view_json_paths.sql
services/hedge/src/: config.rs  lib.rs  position.rs  test_utils.rs  usdc_rebalance.rs  wrapper.rs
services/hedge/src/alpaca_wallet/: asset.rs  client.rs  transfer.rs  whitelist.rs
services/hedge/src/cli/: alpaca_wallet.rs  auth.rs  cctp.rs  mod.rs  rebalancing.rs
services/hedge/src/conductor/: builder.rs  mod.rs
services/hedge/src/dashboard/: event.rs
services/hedge/src/integration_tests/: arbitrage.rs
services/hedge/src/inventory/: broadcasting.rs  mod.rs  polling.rs  snapshot.rs
services/hedge/src/offchain/: order_poller.rs
services/hedge/src/onchain/: accumulator.rs  clear.rs  io.rs  mock.rs  mod.rs  raindex.rs  trade.rs
services/hedge/src/rebalancing/: spawn.rs  transfer.rs
services/taker/: Cargo.toml
services/taker/migrations/: 20260326171706_tracked_order_view.sql  20260326171800_event_store.sql
services/taker/src/: approval.rs  classification.rs  config.rs  lib.rs  main.rs  profitability.rs
(+739 files in other folders)
