[workspace]
members = [
  "services/hedge",
  "services/taker",
  "crates/bridge",
  "crates/dto",
  "crates/event-sorcery",
  "crates/evm",
  "crates/execution",
  "crates/finance",
  "crates/float-macro",
  "crates/float-serde",
  "crates/shared",
]
resolver = "2"

exclude = ["lib"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/ST0x-Technology"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "allow"

# `priority = -1` allow for allowing lints enabled by a group to be re-disabled
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Keep in sync with bacon.toml pedantic job
doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[workspace.dependencies]
aes-gcm = "0.10.3"
alloy = { version = "1.0.38", features = ["full", "rand", "node-bindings"] }
alloy-primitives = "1.4"
alloy-signer-turnkey = "=1.0.41"
anyhow = "1.0.102"
apca = "0.30.0"
approx = "0.5.1"
async-trait = "0.1.81"
backon = { version = "1.5.1", features = ["tokio"] }
base64 = "0.22"
bon = "3.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
cqrs-es = "0.4"
flate2 = "1.0"
futures-util = "0.3.31"
httpmock = "0.8"
itertools = "0.14.0"
lazy_static = "1.5.0"
num-decimal = { version = "0.2.5", default-features = false, features = [
  "num-v04",
] }
num-traits = "0.2"
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
proptest = "1.7.0"
rain-error-decoding = { git = "https://github.com/rainlanguage/rain.error" }
rain-math-float = { path = "lib/rain.orderbook/lib/rain.orderbook.interface/lib/rain.interpreter.interface/lib/rain.math.float/crates/float" }
rand = "0.8"
reqwest = { version = "0.12.4", features = [
  "json",
  "rustls-tls",
  "gzip",
  "blocking",
] }
revm = { version = "=25.0.0", default-features = false }
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
rsa = { version = "0.9.10", features = ["pem"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
serial_test = "3.2.0"
sqlite-es = { git = "https://github.com/ST0x-Technology/st0x.issuance", package = "sqlite-es" }
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "chrono",
  "runtime-tokio-rustls",
] }
st0x-bridge = { path = "crates/bridge" }
st0x-dto = { path = "crates/dto" }
st0x-event-sorcery = { path = "crates/event-sorcery" }
st0x-evm = { path = "crates/evm" }
st0x-execution = { path = "crates/execution" }
st0x-finance = { path = "crates/finance" }
st0x-float-macro = { path = "crates/float-macro" }
st0x-float-serde = { path = "crates/float-serde" }
st0x-hedge = { path = "services/hedge" }
st0x-shared = { path = "crates/shared" }
st0x-taker = { path = "services/taker" }
temp-env = "0.3.6"
tempfile = "3.24.0"
test-log = { version = "0.2.19", features = ["trace"] }
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
toml = "0.9.11"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-test = "0.2.5"
trybuild = "1.0.116"
ts-rs = { version = "11.1.0", features = [
  "chrono",
  "chrono-impl",
  "serde-compat",
] }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
# Pin wasm-bindgen version for compatibility with rain.wasm transitive dependency
wasm-bindgen = "=0.2.100"
