[workspace]
members = [
  ".",
  "crates/config",
  "crates/dto",
  "crates/execution",
  "crates/finance",
  "crates/bridge",
  "crates/evm",
  "crates/float-macro",
  "crates/float-serde",
  "crates/raindex",
]
resolver = "2"
exclude = ["lib"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/ST0x-Technology"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "allow"

# `priority = -1` allow for allowing lints enabled by a group to be re-disabled
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Keep in sync with bacon.toml pedantic job
doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[workspace.dependencies]
aes-gcm = "0.10.3"
alloy = { version = "1.0.38", features = ["full", "rand", "node-bindings"] }
alloy-primitives = "1.4"
alloy-signer-turnkey = "=1.0.41"
anyhow = "1.0.102"
apalis-board = { version = "1.0.0-rc.8", features = ["axum", "ui"] }
apalis-workflow = "0.1.0-rc.9"
apca = "0.30.0"
approx = "0.5.1"
async-trait = "0.1.81"
axum = { version = "0.8.9", features = ["ws", "json"] }
backon = { version = "1.5.1", features = ["tokio"] }
base64 = "0.22"
bon = "3.9.1"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
cqrs-es = "0.4"
flate2 = "1.0"
futures-util = "0.3.31"
httpmock = "0.8"
itertools = "0.14.0"
lazy_static = "1.5.0"
num-decimal = { version = "0.2.5", default-features = false, features = [
  "num-v04",
] }
num-traits = "0.2"
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
proptest = "1.7.0"
rain-error-decoding = { git = "https://github.com/rainlanguage/rain.error" }
rain-math-float = { path = ".tmp/rain-math-float/crates/float" }
rand = "0.8"
reqwest = { version = "0.12.4", features = [
  "json",
  "rustls-tls",
  "gzip",
  "blocking",
] }
rsa = { version = "0.9.10", features = ["pem"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
serial_test = "3.2.0"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "chrono",
  "runtime-tokio-rustls",
] }
st0x-bridge = { path = "crates/bridge" }
st0x-config = { path = "crates/config" }
st0x-dto = { path = "crates/dto" }
st0x-evm = { path = "crates/evm" }
st0x-execution = { path = "crates/execution" }
st0x-finance = { path = "crates/finance" }
st0x-float-macro = { path = "crates/float-macro" }
st0x-float-serde = { path = "crates/float-serde" }
st0x-hedge = { path = "." }
st0x-raindex = { path = "crates/raindex" }
temp-env = "0.3.6"
tempfile = "3.24.0"
test-log = { version = "0.2.19", features = ["trace"] }
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "0.9.11"
tracing = "0.1.41"
tracing-appender = "0.2.5"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# no-env-filter: custom `target:` strings (e.g. "hedge", "rebalance") don't
# match the default module-path-based EnvFilter in tests. This feature makes
# the test subscriber capture all targets regardless of RUST_LOG.
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
trybuild = "1.0.116"
ts-rs = { version = "11.1.0", features = [
  "chrono",
  "chrono-impl",
  "serde-compat",
] }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde", "v4"] }
# Pin wasm-bindgen version for compatibility with rain.wasm transitive dependency
# (bumped in lockstep with the rain.orderbook / rain.math.float bump, whose
# newer crates require >=0.2.122).
wasm-bindgen = "=0.2.122"

[workspace.dependencies.sqlite-es]
git = "https://github.com/ST0x-Technology/event-sorcery.git"
rev = "1557172049c8a43add209a86c7d809e89a5fbc82"
package = "sqlite-es"

[workspace.dependencies.st0x-event-sorcery]
git = "https://github.com/ST0x-Technology/event-sorcery.git"
rev = "1557172049c8a43add209a86c7d809e89a5fbc82"
package = "event-sorcery"

[package]
name = "st0x-hedge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[features]
default = ["all-wallets"]
all-wallets = ["wallet-private-key", "wallet-turnkey"]
wallet-turnkey = ["st0x-evm/turnkey", "st0x-config/wallet-turnkey"]
wallet-private-key = ["st0x-evm/local-signer", "st0x-config/wallet-private-key"]

test-support = [
  "st0x-bridge/test-support",
  "st0x-config/test-support",
  "wallet-private-key",
]
mock = [
  "st0x-execution/mock",
  "st0x-evm/mock",
  "dep:httpmock",
  "wallet-private-key",
]

[dependencies]
apalis = "1.0.0-rc.9"
apalis-sqlite = "1.0.0-rc.8"
apalis-codec = "0.1.0-rc.9"
apalis-core = "1.0.0-rc.9"
apalis-cron = { version = "1.0.0-rc.8", default-features = false }
task-supervisor = { version = "0.4", features = ["tracing"] }

aes-gcm.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
backon.workspace = true
base64.workspace = true
bon.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
flate2.workspace = true
futures-util.workspace = true
httpmock = { workspace = true, optional = true }
itertools.workspace = true
lazy_static.workspace = true
num-traits.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
rain-error-decoding.workspace = true
rain-math-float.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
st0x-bridge = { workspace = true, features = ["cctp"] }
st0x-config.workspace = true
st0x-dto.workspace = true
st0x-event-sorcery.workspace = true
st0x-evm.workspace = true
st0x-execution.workspace = true
st0x-finance.workspace = true
st0x-float-macro.workspace = true
st0x-float-serde.workspace = true
st0x-raindex.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
ts-rs.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true
# Force transitive wasm-bindgen to match rain.wasm's expected version
wasm-bindgen.workspace = true
tracing-appender.workspace = true
tokio-util.workspace = true
apalis-workflow.workspace = true
axum.workspace = true
apalis-board.workspace = true

[dev-dependencies]
approx.workspace = true
async-trait.workspace = true
bon.workspace = true
httpmock.workspace = true
proptest.workspace = true
rain-math-float.workspace = true
regex = "1.12.3"
rsa.workspace = true
serial_test.workspace = true
st0x-bridge = { workspace = true, features = ["mock"] }
st0x-event-sorcery = { workspace = true, features = ["test-support"] }
st0x-evm = { workspace = true, features = ["mock", "test-support"] }
st0x-execution = { workspace = true, features = ["mock", "test-support"] }
st0x-hedge = { workspace = true, features = ["test-support", "mock"] }
temp-env.workspace = true
tempfile.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite.workspace = true
tower = { version = "0.5.3", features = ["util"] }
tracing-subscriber.workspace = true
tracing-test.workspace = true
url.workspace = true

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[lints]
workspace = true
