[package]
name = "st0x-bridge"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-support = []
cctp = [
  "dep:backon",
  "dep:rain-math-float",
  "dep:reqwest",
  "dep:serde",
  "dep:serde_json",
  "dep:st0x-evm",
  "dep:st0x-exact-decimal",
  "dep:thiserror",
  "dep:tokio",
  "dep:tracing",
]

[dependencies]
alloy.workspace = true
async-trait.workspace = true

# Optional deps gated behind cctp feature
backon = { workspace = true, optional = true }
rain-math-float = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
st0x-evm = { workspace = true, optional = true }
st0x-exact-decimal = { version = "0.1.0", path = "../exact-decimal", optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
httpmock.workspace = true
proptest.workspace = true
itertools = "0.14.0"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
rand.workspace = true
st0x-evm = { workspace = true, features = ["local-signer"] }

[lints]
workspace = true
