[package]
name = "st0x-broker"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
async-trait.workspace = true
sqlx.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
base64.workspace = true
backon.workspace = true
clap.workspace = true
tracing.workspace = true
urlencoding.workspace = true
flate2.workspace = true
tokio.workspace = true
url.workspace = true
rand.workspace = true
serde_json.workspace = true
chrono-tz.workspace = true
num-traits.workspace = true
apca = "0.30.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
aes-gcm = "0.10.3"

[dev-dependencies]
httpmock.workspace = true
serde_json.workspace = true
serial_test.workspace = true

[lints]
workspace = true
