[package]
name = "st0x-config"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[features]
default = []
wallet-turnkey = ["st0x-evm/turnkey"]
wallet-private-key = ["st0x-evm/local-signer"]
test-support = [
  "st0x-bridge/test-support",
  "st0x-bridge/cctp",
  "st0x-evm/test-support",
  "st0x-execution/mock",
  "dep:proptest",
  "dep:tempfile",
]

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
async-trait.workspace = true
bon.workspace = true
clap.workspace = true
itertools.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
proptest = { workspace = true, optional = true }
rain-math-float.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlx.workspace = true
st0x-bridge.workspace = true
st0x-evm.workspace = true
st0x-execution.workspace = true
st0x-finance.workspace = true
st0x-float-macro.workspace = true
st0x-float-serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tempfile = { workspace = true, optional = true }
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
url.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
st0x-evm = { workspace = true, features = ["test-support"] }
st0x-finance = { workspace = true, features = ["test-support"] }
tempfile.workspace = true

[lints]
workspace = true
