[package]
name = "st0x-contract-caller"
version = "0.1.0"
edition = "2024"

[features]
default = []
local-signer = []

[dependencies]
alloy.workspace = true
async-trait.workspace = true
rain-error-decoding = { git = "https://github.com/rainlanguage/rain.error" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
