[package]
name = "st0x-dto"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
st0x-exact-decimal = { version = "0.1.0", path = "../exact-decimal" }
ts-rs = { version = "11.1.0", features = [
  "chrono",
  "chrono-impl",
  "serde-compat",
] }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
