[package]
name = "st0x-dto"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
rain-math-float.workspace = true
ts-rs = { version = "11.1.0", features = [
  "chrono",
  "chrono-impl",
  "serde-compat",
] }
st0x-float-serde = { version = "0.1.0", path = "../float-serde" }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
