[package]
name = "st0x-dto"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
rain-math-float.workspace = true
serde = { workspace = true, features = ["derive"] }
st0x-finance.workspace = true
st0x-float-macro.workspace = true
st0x-float-serde.workspace = true
strum = { version = "0.28.0", features = ["derive"] }
ts-rs.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
serde_json.workspace = true

[lints]
workspace = true
