[package]
name = "st0x-event-sorcery"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait.workspace = true
cqrs-es.workspace = true
sqlite-es.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
test-support = []

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
