[package]
name = "st0x-event-sorcery"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
cqrs-es.workspace = true
sqlite-es.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true

[features]
test-support = ["dep:tokio"]

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
