[package]
name = "st0x-evm"
version = "0.1.0"
edition = "2024"

[features]
default = []
mock = ["local-signer", "dep:url", "dep:anyhow"]
local-signer = []
turnkey = ["dep:alloy-signer-turnkey", "dep:serde"]

[dependencies]
alloy.workspace = true
alloy-signer-turnkey = { version = "=1.0.41", optional = true }
anyhow = { version = "1.0.102", optional = true }
async-trait.workspace = true
url = { workspace = true, optional = true }
rain-error-decoding = { git = "https://github.com/rainlanguage/rain.error" }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
httpmock.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
