[package]
name = "st0x-evm"
version = "0.1.0"
edition = "2024"

[features]
default = []
mock = ["local-signer", "dep:url", "dep:anyhow"]
local-signer = []
turnkey = [
  "dep:reqwest",
  "dep:serde_json",
  "dep:turnkey_client",
  "dep:turnkey_api_key_stamper",
  "dep:mime",
]

[dependencies]
alloy.workspace = true
anyhow = { workspace = true, optional = true }
async-trait.workspace = true
dashmap = "6.1.0"
futures = "0.3.32"
mime = { version = "0.3.17", optional = true }
rain-error-decoding.workspace = true
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
turnkey_api_key_stamper = { version = "0.4.0", optional = true }
turnkey_client = { version = "0.4.0", optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
httpmock.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-test.workspace = true

[lints]
workspace = true
