[package]
name = "st0x-execution"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable mock mode for testing from downstream crates
mock = []
# Expose test-only constructors (e.g. Symbol::force_new)
test-support = []

[dependencies]
alloy.workspace = true
async-trait.workspace = true
sqlx.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
base64.workspace = true
backon.workspace = true
tracing.workspace = true
urlencoding.workspace = true
flate2.workspace = true
tokio.workspace = true
url.workspace = true
rand.workspace = true
serde_json.workspace = true
chrono-tz.workspace = true
num-traits.workspace = true
apca = "0.30.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
aes-gcm = "0.10.3"
cqrs-es.workspace = true
sqlite-es.workspace = true
rust_decimal = { workspace = true, features = ["serde-with-float"] }
num-decimal.workspace = true
rust_decimal_macros = "1.40.0"
st0x-exact-decimal = { version = "0.1.0", path = "../exact-decimal" }
rain-math-float = { version = "0.1.0", path = "../../lib/rain.orderbook/lib/rain.orderbook.interface/lib/rain.interpreter.interface/lib/rain.math.float/crates/float" }

[dev-dependencies]
httpmock.workspace = true
proptest.workspace = true
rust_decimal_macros = "1.40.0"
serde_json.workspace = true
serial_test.workspace = true

[lints]
workspace = true
