[package]
name = "st0x-execution"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable mock mode for testing from downstream crates
mock = ["test-support", "dep:anyhow", "dep:bon", "dep:httpmock"]
# Expose test-only constructors
test-support = []

[dependencies]
aes-gcm.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
anyhow = { workspace = true, optional = true }
apca.workspace = true
async-trait.workspace = true
backon.workspace = true
base64.workspace = true
bon = { workspace = true, optional = true }
chrono.workspace = true
chrono-tz.workspace = true
cqrs-es.workspace = true
flate2.workspace = true
httpmock = { workspace = true, optional = true }
num-decimal.workspace = true
num-traits.workspace = true
rain-math-float.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-es.workspace = true
sqlx.workspace = true
st0x-finance.workspace = true
st0x-float-macro.workspace = true
st0x-float-serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
httpmock.workspace = true
proptest.workspace = true
serde_json.workspace = true
serial_test.workspace = true

[lints]
workspace = true
