[package]
name = "st0x-finance"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
alloy-primitives = { workspace = true, optional = true }
num-traits.workspace = true
rust_decimal = { workspace = true, features = ["serde"] }
rust_decimal_macros.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
rust_decimal_macros.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[features]
alloy = ["dep:alloy-primitives"]
