[package]
name = "st0x-finance"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[features]
default = []
test-support = ["dep:proptest"]

[dependencies]
alloy-primitives.workspace = true
proptest = { workspace = true, optional = true }
rain-math-float.workspace = true
serde = { workspace = true, features = ["derive"] }
st0x-float-macro.workspace = true
st0x-float-serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
