[package]
name = "st0x-float-serde"
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
rain-math-float = { version = "0.1.0", path = "../../lib/rain.orderbook/lib/rain.orderbook.interface/lib/rain.interpreter.interface/lib/rain.math.float/crates/float" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
